--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -1,18 +1,46 @@
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Retrieve quiz result from sessionStorage
-        const result = JSON.parse(sessionStorage.getItem('quizResult'));
-        
-        if (result) {
-            const { score, totalQuestions } = result;
-            const resultContainer = document.getElementById('result');
-            resultContainer.innerHTML = `You scored ${score} out of ${totalQuestions}.`;
-
-            if (score === totalQuestions) {
-                resultContainer.classList.add('correct');
-            } else {
-                resultContainer.classList.add('incorrect');
-            }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz Results</title>
+    <style>
+        /* Add some basic styles if needed */
+        #result {
+            font-size: 20px;
+            margin-top: 20px;
         }
-    });
-</script>
+    </style>
+</head>
+<body>
+    <div id="result"></div>
+    <button onclick="goBack()">Go Back to Quiz</button>
+
+    <script>
+        // Retrieve quiz results from sessionStorage
+        const result = JSON.parse(sessionStorage.getItem('quizResult'));
+
+        if (result) {
+            const scoreMessage = `Your score is ${result.score} out of ${result.totalQuestions}.`;
+            let personalizedMessage = '';
+
+            if (result.score >= 6) {
+                personalizedMessage = 'Excellent job! Keep up the great work!';
+            } else if (result.score >= 4) {
+                personalizedMessage = 'Good effort! You’re almost there!';
+            } else {
+                personalizedMessage = 'Please contact our coach, Devis More, for further assistance.';
+            }
+
+            document.getElementById('result').innerHTML = `<p>${scoreMessage}</p><p>${personalizedMessage}</p>`;
+        } else {
+            document.getElementById('result').innerHTML = 'No results available. Please complete the quiz.';
+        }
+
+        function goBack() {
+            // Redirect back to the quiz page (assuming it’s the home page)
+            window.location.href = 'quiz-page.html';  // Change to your actual quiz page URL
+        }
+    </script>
+</body>
+</html>
