--- a/backend/frontend/quiz_results.html
+++ b/backend/frontend/quiz_results.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Results</title>
-    <style>
-        /* Add some basic styles if needed */
-        #result {
-            font-size: 20px;
-            margin-top: 20px;
-        }
-    </style>
+    <title>Quiz</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="canv.css"> <!-- External CSS -->
+   
+    
+    <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+    <script src="quiz.js"></script>   
+    
 </head>
 <body>
+    <nav class="navbar"  id="navbar-placeholder">
+        <div class="logo">Logo/SelfSense</div>
+        <ul class="nav-links">
+            <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
+        </ul>
+        <div class="login-register">
+          <a href="javascript:void(0);" onclick="loadPage('login')">Login/Register</a>
+        </div>
+        <div class="person-icon">
+          <img src="person-icon.png" alt="Person Icon">
+        </div>
+        <div class="flag-icon">
+          <img src="armenian-flag.png" alt="Armenian Flag">
+        </div>
+    </nav>
+    <div id="dynamic-content"></div>
     <div id="result"></div>
     <button onclick="goTo()">Start Chatting</button>
 
