--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar"  id="navbar-placeholder">
+  <nav class="navbar" id="navbar-placeholder">
     <div class="logo">Logo/SelfSense</div>
     <ul class="nav-links">
         <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
@@ -30,6 +30,7 @@
     </div>
   </nav>
 
+  <!-- Dynamic Content Container -->
   <div id="dynamic-content"></div> <!-- This will contain the dynamic content -->
 
   <!-- Static Home Content (only shown when "Home" is clicked) -->
@@ -46,16 +47,32 @@
     </div>
   </div>
 
-  <!-- Quiz Section -->
-  <div id="quizSection" class="page-content" style="display:none;">
-    <!-- Quiz content will load here dynamically -->
+  <!-- About Us Section -->
+  <div id="about-content" class="page-content" style="display:none;">
+    <h2>About Us</h2>
+    <p>Learn about our platform, our mission, and how we help you prepare for self-defense.</p>
+    <!-- Insert About Us content here -->
   </div>
 
-  <!-- Chat Section (loaded dynamically after quiz completion) -->
-  <div id="chatSection" class="page-content" style="display:none;">
+  <!-- VR Glasses Section -->
+  <div id="vr-content" class="page-content" style="display:none;">
+    <h2>VR Glasses</h2>
+    <p>Discover our virtual reality glasses and how they enhance your training.</p>
+    <!-- Insert VR Glasses content here -->
+  </div>
+
+  <!-- Chat Section -->
+  <div id="chat-content" class="page-content" style="display:none;">
     <h2>Welcome to the Chat Section</h2>
     <p>This is where the chat interface will appear.</p>
     <!-- Insert your chat UI or app content here -->
+  </div>
+
+  <!-- Quiz Section -->
+  <div id="quiz-content" class="page-content" style="display:none;">
+    <h2>Quiz Section</h2>
+    <p>Answer the quiz to test your self-defense knowledge.</p>
+    <!-- Insert quiz UI or app content here -->
   </div>
 </body>
 </html>
