--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VR Glasses</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="canv.css">
 </head>
 
 <body>
     <div class="container my-5">
         <h2 class="text-center">VR Glasses</h2>
-        <p>This is where the VR Glasses will be.</p>
+        <p class="text-center">The page is still under construction</p>
+    </div>
+    <div class="home-content">
+        <img src="vr_glasses.png" alt="Coach Image" class="image-vr">
     </div>
 
     <footer class="bg-light py-4">
