--- a/backend/frontend/vr-glasses.html
+++ b/backend/frontend/vr-glasses.html
@@ -30,13 +30,16 @@
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
       </nav>
-    <div id="dynamic-content"></div>
-    <div class="home-content">
-        <h2 class="vr-content">VR Glasses</h2>
-        <p class="vr-content" span style="color: red;">The page is still under construction</p>
-        <div class="image-container"></div>
-        <img src="vr_glasses.png" alt="Coach Image" class="image-vr">
-    </div>
+      <div id="dynamic-content"></div>
+      <div class="vr-content">
+          <div class="vr-image-container">
+              <img src="vr_glasses.png" alt="VR Glasses Image" class="vr-image">
+          </div>
+          <div class="vr-text-container">
+              <h2>VR Glasses</h2>
+              <p style="color: red;">The page is still under construction</p>
+          </div>
+      </div>
 
     <footer class="bg-light py-4">
         <div class="container text-center">
