--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- External CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Self-Defense</title>
+  <link rel="stylesheet" href="canv.css">
+  <script src="navigation.js" defer></script> <!-- External JavaScript file -->
+  
 </head>
-
 <body>
-    <!-- Navbar with Links to Sections -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Brand Name</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="quiz.html">Quiz</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="chat.html">Chat</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="vr-glasses.html">VR Glasses</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" id="logoutBtn">Logout</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="container my-5">
-        <h1 class="text-center">Welcome to the Home Page</h1>
-        <p class="text-center">Click the navigation links above to explore the features.</p>
+  <!-- Navigation Bar -->
+  <nav class="navbar" id="navbar-placeholder">
+    <img src="logo.png" alt="Logo" class="logo">
+    <ul class="nav-links">
+        <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
+        <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
+    </ul>
+    <div class="logout">
+      <a href="javascript:void(0);" onclick="loadPage('logout')">Log out</a>
     </div>
+    <div class="person-icon">
+      <img src="person-icon.png" alt="Person Icon">
+    </div>
+    <div class="flag-icon">
+      <img src="armenian-flag.png" alt="Armenian Flag">
+    </div>
+  </nav>
 
-    <!-- Footer -->
-    <footer class="bg-light py-4">
-        <div class="container text-center">
-            <p>&copy; 2024 Brand Name. All Rights Reserved. | <a href="#">Privacy Policy</a> | <a href="#">Terms</a></p>
-        </div>
-    </footer>
+  <!-- Dynamic Content Container -->
+  <div id="dynamic-content"></div> <!-- This will contain the dynamic content -->
 
-    <!-- Bootstrap JS and dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+  <!-- Static Home Content (only shown when "Home" is clicked) -->
+  <div id="home-content" class="page-content">
+    <div class="image-container">
+      <img src="home.png" alt="Self-defense Image" class="image">
+    </div>
+    <div class="text-container">
+      <h1>Welcome to SelfSense</h1>
+      <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3>
+      <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p>
+      <h3>Ready to defend confidently?</h3>
+      <a href="javascript:void(0);" onclick="loadPage('login')" class="get-started-btn">LET’S GET STARTED</a>
+    </div>
+  </div>
 
-    <!-- Logout Script -->
-    <script>
-        // Check if user is logged in by checking localStorage
-        if (!localStorage.getItem('userLoggedIn')) {
-            window.location.href = 'index.html'; // Redirect to login page if not logged in
-        }
+  <!-- About Us Section -->
+  <div id="about-content" class="page-content" style="display:none;">
+    <h2>About Us</h2>
+    <p>Learn about our platform, our mission, and how we help you prepare for self-defense.</p>
+    <!-- Insert About Us content here -->
+  </div>
 
-        // Handle logout action
-        document.getElementById('logoutBtn').addEventListener('click', function () {
-            localStorage.removeItem('userLoggedIn');
-            window.location.href = 'index.html'; // Redirect to login page after logout
-        });
-    </script>
+  <!-- VR Glasses Section -->
+  <div id="vr-content" class="page-content" style="display:none;">
+    <h2>VR Glasses</h2>
+    <p>Discover our virtual reality glasses and how they enhance your training.</p>
+    <!-- Insert VR Glasses content here -->
+  </div>
+
+  <!-- Chat Section -->
+  <div id="chat-content" class="page-content" style="display:none;">
+    <h2>Welcome to the Chat Section</h2>
+    <p>This is where the chat interface will appear.</p>
+    <!-- Insert your chat UI or app content here -->
+  </div>
+
+  <!-- Quiz Section -->
+  <div id="quiz-content" class="page-content" style="display:none;">
+    <h2>Quiz Section</h2>
+    <p>Answer the quiz to test your self-defense knowledge.</p>
+    <!-- Insert quiz UI or app content here -->
+  </div>
 </body>
-
 </html>
