--- a/backend/frontend/index.html
+++ b/backend/frontend/index.html
@@ -43,7 +43,8 @@
       <h3><span style="color: red;">STAY PREPARED, STAY PROTECTED</span></h3>
       <p>SafeSense is a self-defense platform that assesses your safety skills, matches you with expert trainers, and guides you through personalized training to boost your confidence and preparedness.</p>
       <h3>Ready to defend confidently?</h3>
-      <a href="javascript:void(0);" onclick="loadPage('login')" class="get-started-btn">LET’S GET STARTED</a>
+      <!-- <a href="javascript:void(0);" onclick="loadPage('')" class="get-started-btn">LET’S GET STARTED</a> -->
+      <a class="get-started-btn">LET’S GET STARTED</a>
     </div>
   </div>
 
