--- a/backend/frontend/about.html
+++ b/backend/frontend/about.html
@@ -6,10 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About US</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="canv.css">
+    <script src="navigation.js" defer></script> 
 </head>
 
 <body>
-    <div class="container my-5">
+    <nav class="navbar" id="navbar-placeholder">
+        <img src="logo.png" alt="Logo" class="logo">
+        <ul class="nav-links">
+            <li><a href="javascript:void(0);" onclick="loadPage('home')" class="active">Home</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('about')">About Us</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('vr')">VR Glasses</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('chat')">Chat</a></li>
+            <li><a href="javascript:void(0);" onclick="loadPage('quiz')">Quiz</a></li>
+        </ul>
+        <div class="logout">
+            <a href="javascript:void(0);" onclick="loadPage('logout')">Log out</a>
+          </div>
+        <div class="person-icon">
+          <img src="person-icon.png" alt="Person Icon">
+        </div>
+        <div class="flag-icon">
+          <img src="armenian-flag.png" alt="Armenian Flag">
+        </div>
+      </nav>
+    <div id="dynamic-content"></div>
+    <div class="page-content">
     <div class="image-container">
             <img src="home_1.jpg" alt="Self-defense Image" class="image">
     </div>
