--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -1,4 +1,4 @@
-<!-- Only the content inside the body should be in login.html -->
+<body>
 <div class="container">
     <div class="card">
         <div class="card-body">
@@ -51,3 +51,5 @@
         </div>
     </div>
 </div>
+<script src="script.js"></script> 
+</body>
