--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -1,55 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <!-- Bootstrap CSS (Ensure it's loaded before your custom styles if any) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
 <body>
-<div class="container">
-    <div class="card">
-        <div class="card-body">
-            <h2 class="text-center" id="formTitle">Login</h2>
+    <!-- Container for Login and Register Tabs -->
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="text-center" id="formTitle">Login</h2>
 
-            <ul class="nav-tabs" id="authTabs" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="loginTab" data-bs-toggle="tab" href="#loginForm" role="tab" aria-controls="loginForm" aria-selected="true">Login</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="registerTab" data-bs-toggle="tab" href="#registerForm" role="tab" aria-controls="registerForm" aria-selected="false">Register</a>
-                </li>
-            </ul>
+                <ul class="nav-tabs" id="authTabs" role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link active" id="loginTab" data-bs-toggle="tab" href="#loginForm" role="tab" aria-controls="loginForm" aria-selected="true">Login</a>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <a class="nav-link" id="registerTab" data-bs-toggle="tab" href="#registerForm" role="tab" aria-controls="registerForm" aria-selected="false">Register</a>
+                    </li>
+                </ul>
 
-            <div class="tab-content mt-3">
-                <!-- Login Form -->
-                <div class="tab-pane fade show active" id="loginForm" role="tabpanel" aria-labelledby="loginTab">
-                    <form id="loginFormContent">
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Password</label>
-                            <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
-                    </form>
-                </div>
+                <div class="tab-content mt-3">
+                    <!-- Login Form -->
+                    <div class="tab-pane fade show active" id="loginForm" role="tabpanel" aria-labelledby="loginTab">
+                        <form id="loginFormContent">
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Login</button>
+                        </form>
+                    </div>
 
-                <!-- Registration Form -->
-                <div class="tab-pane fade" id="registerForm" role="tabpanel" aria-labelledby="registerTab">
-                    <form id="registerFormContent">
-                        <div class="form-group">
-                            <label for="username">Username</label>
-                            <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="emailReg">Email</label>
-                            <input type="email" class="form-control" id="emailReg" placeholder="Enter your email" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="passwordReg">Password</label>
-                            <input type="password" class="form-control" id="passwordReg" placeholder="Enter your password" required>
-                        </div>
-                        <button type="submit" class="btn btn-primary w-100">Register</button>
-                    </form>
+                    <!-- Registration Form -->
+                    <div class="tab-pane fade" id="registerForm" role="tabpanel" aria-labelledby="registerTab">
+                        <form id="registerFormContent">
+                            <div class="form-group">
+                                <label for="username">Username</label>
+                                <input type="text" class="form-control" id="username" placeholder="Enter your username" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="emailReg">Email</label>
+                                <input type="email" class="form-control" id="emailReg" placeholder="Enter your email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="passwordReg">Password</label>
+                                <input type="password" class="form-control" id="passwordReg" placeholder="Enter your password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Register</button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<script src="script.js"></script> 
+
+    <!-- Include jQuery from CDN (Ensure jQuery is loaded before Bootstrap JS) -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Include Bootstrap JS for tab functionality -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Include custom script.js -->
+    <script src="script.js"></script>  <!-- Ensure correct path to script.js -->
 </body>
+
+</html>
