--- a/backend/frontend/login.html
+++ b/backend/frontend/login.html
@@ -70,7 +70,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Include custom script.js -->
-    <script src="script.js"></script>  <!-- Ensure correct path to script.js -->
+    <script src="script.js"></script>  
 </body>
 
 </html>
