--- a/backend/frontend/quiz_content.html
+++ b/backend/frontend/quiz_content.html
@@ -34,6 +34,7 @@
           <img src="armenian-flag.png" alt="Armenian Flag">
         </div>
       </nav>
+    <div id="dynamic-content"></div>
     <div id="quizContainer" class="quiz-content">
   
             <!-- Dynamic content will be loaded here -->
