--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -26,8 +26,8 @@
       <img src="armenian-flag.png" alt="Armenian Flag">
     </div>
 </nav>
-
-  <!-- Static Home Content (only shown when "Home" is clicked) -->
+   
+<div id="dynamic-content"></div>
   <div id="main-content" class="page-content">
     <div class="logout">
         <a href="javascript:void(0);" onclick="loadPage('logout')">Log out</a>
