--- a/backend/frontend/home.html
+++ b/backend/frontend/home.html
@@ -20,7 +20,7 @@
     </ul>
     
     <div class="person-icon" onclick="toggleDropdown()">
-        <img src="person-icon.png" alt="Person Icon" style="width: 40px; height: 40px;">
+        <img src="person-icon.png" alt="Person Icon" class="person-icon img">
         <div class="dropdown-menu" id="dropdown-menu">
           <a href="javascript:void(0);" onclick="loadPage('logout')">Log out</a>
         </div>
@@ -32,9 +32,6 @@
    
 <div id="dynamic-content"></div>
   <div id="main-content" class="page-content">
-    <div class="logout">
-        <a href="javascript:void(0);" onclick="loadPage('logout')">Log out</a>
-      </div>
     <div class="image-container">
       <img src="home.png" alt="Self-defense Image" class="image">
     </div>
